(Add) Add HOME SECTION component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import './styles/variables.scss';
-@import './components/header/style.scss';
+@import './view/lending/style.scss';
 
 html {
     font-size: 60%;
