--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -16,7 +16,7 @@
         color: $text-color;
         font-weight: 800;
         cursor: pointer;
-        transition: .3 ease;
+        transition: .3s ease;
 
         &:hover {
             transform: scale(1.1);
@@ -33,7 +33,7 @@
             color: $text-color;
             margin-left: 4rem;
             font-weight: 500;
-            transition: .3 ease;
+            transition: .3s ease;
 
             &:hover, &.active {
                 color: $main-color;
