--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -1,1 +1,2 @@
-@import './components/section_home/style.scss'
+@import './components/section_home/style.scss';
+@import './components/section_road_map/style.scss';
