(Add) Add FAQ SECTION component

--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -1,2 +1,3 @@
 @import './components/section_home/style.scss';
 @import './components/section_road_map/style.scss';
+@import './components/section_faq/style.scss';
