(Add) Add ANALYTICS SECTION component

--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -1,3 +1,4 @@
 @import './components/section_home/style.scss';
 @import './components/section_road_map/style.scss';
 @import './components/section_faq/style.scss';
+@import './components/section_analytics/style.scss';
