(Add) Add FORM SECTION components

--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -2,3 +2,4 @@
 @import './components/section_road_map/style.scss';
 @import './components/section_faq/style.scss';
 @import './components/section_analytics/style.scss';
+@import './components/section_form/style.scss';
