(Add + Fix) Add FOOTER component + media quary + bug fix

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -28,6 +28,11 @@
     }
 
     .navbar {
+
+        &.open {
+            display: block; 
+        }
+
         a {
             font-size: 1.8rem;
             color: $text-color;
