--- a/src/view/lending/style.scss
+++ b/src/view/lending/style.scss
@@ -1,2 +1,4 @@
 @import '../../components/header/style.scss';
 @import '../../components/main/style.scss';
+@import '../../components/footer/style.scss';
+@import '../../styles/media.scss';
