--- a/src/components/main/components/section_form/style.scss
+++ b/src/components/main/components/section_form/style.scss
@@ -1,6 +1,6 @@
 .form {
     background-color: $bg-color;
-    padding: 100px 15px;
+    padding: 100px 15px 0 15px;
 
     & h2 {
         margin-bottom: 3rem;
@@ -13,7 +13,7 @@
         flex-direction: column;
 
         .file-drop-zone {
-            width: 100%;
+            width: 90%;
             border: 2px dashed #00ffee;
             border-radius: 8px;
             padding: 20px 25px;
@@ -42,7 +42,7 @@
         }
 
         input, textarea {
-            width: 100%;
+            width: 90%;
             padding: 2.5rem;
             font-size: 1.8rem;
             color: $text-color;
@@ -72,6 +72,10 @@
             gap: 3rem;
             margin: 5rem auto;
             text-align: center;
+
+            .input-group {
+                width: 100%;
+            }
 
             .input-box {
                 display: flex;
