(Add) Add SIGN IN page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './styles/variables.scss';
 @import './view/lending/style.scss';
+@import './view/singIn/style.scss';
 
 html {
     font-size: 60%;
