--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import './styles/variables.scss';
 @import './view/lending/style.scss';
 @import './view/singIn/style.scss';
+@import './view/administrator/style.scss';
 
 html {
     font-size: 60%;
