(Add) Add DASHBOARD component

--- a/src/components/adminPanels/components/mainPanel/components/adminHeader/style.scss
+++ b/src/components/adminPanels/components/mainPanel/components/adminHeader/style.scss
@@ -12,6 +12,7 @@
             color: #3d5170;
             font-size: 2rem;
             font-weight: 600;
+            margin-right: 50px;
         }
     }
 }
