--- a/src/components/adminPanels/components/mainPanel/style.scss
+++ b/src/components/adminPanels/components/mainPanel/style.scss
@@ -1,5 +1,10 @@
 @import './components/adminHeader/style.scss';
 
+@import './components/dashboard/style.scss';
+@import './components/addCase/style.scss';
+@import './components/cabinet/style.scss';
+@import './components/account/style.scss';
+
 .mainPanel {
     width: 100%;
 }
