--- a/src/components/adminPanels/components/mainPanel/style.scss
+++ b/src/components/adminPanels/components/mainPanel/style.scss
@@ -7,4 +7,11 @@
 
 .mainPanel {
     width: 100%;
+
+    .container {
+        width: 100%;
+        max-height: 90vh;
+        height: 100%;
+        overflow-y: auto;
+    }
 }
