--- a/src/components/adminPanels/components/mainPanel/components/addCase/style.scss
+++ b/src/components/adminPanels/components/mainPanel/components/addCase/style.scss
@@ -24,7 +24,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 50px;
+    gap: 20px;
     padding: 2rem 0;
 
     .message-container {
@@ -121,7 +121,9 @@
                     outline: none;
                 }
             }
-            
+        }
+        .title {
+            font-size: 2.5rem;
         }
     }
 }
