--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -3,3 +3,4 @@
 @import './components/section_faq/style.scss';
 @import './components/section_analytics/style.scss';
 @import './components/section_form/style.scss';
+@import './components/section_sponsors/style.scss';
