--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -2,17 +2,18 @@
     position: relative;
     bottom: 0;
     padding: 40px 0;
-    background-color: $sec-bg-color;
+    background: rgb(115,98,59);
+    background: linear-gradient(0deg, rgba(115,98,59,1) 0%, rgba(99,84,49,1) 100%);
 
     .social {
         text-align: center;
         padding-bottom: 25px;
-        color: $main-color;
+        color: #D8C4A9;
 
         & a {
             font-size: 25px;
-            color: $main-color;
-            border: 2px solid $main-color;
+            color: white;
+            border: 2px solid #D8C4A9;
             width: 42px;
             height: 42px;
             line-height: 42px;
@@ -24,9 +25,9 @@
 
             &:hover {
                 transform: scale(1.2)translateY(-10px);
-                background-color: $main-color;
-                color: black;
-                box-shadow: 0 0 25px $main-color;
+                background-color: #D8C4A9;
+                color: white;
+                box-shadow: 0 0 25px #D8C4A9;
             }
         }
     }
@@ -49,7 +50,7 @@
                 transition: .3s ease-in-out;
 
                 &:hover {
-                    border-bottom: 3px solid $main-color;
+                    border-bottom: 3px solid #D8C4A9;
                 }
             }
         }
