--- a/src/components/main/components/section_analytics/style.scss
+++ b/src/components/main/components/section_analytics/style.scss
@@ -2,7 +2,14 @@
 
 .analytics {
     padding: 100px 15px;
-    background-color: $sec-bg-color;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(168,157,130,1) 0%, rgba(120,122,124,1) 100%);
+
+    & h2 {
+        margin-bottom: 5rem;
+        font-family: 'Volja', sans-serif;
+        color: rgb(255, 255, 255);
+    }
 
     .charts-container {
         display: flex;
