--- a/src/components/main/components/section_faq/components/style.scss
+++ b/src/components/main/components/section_faq/components/style.scss
@@ -1,5 +1,5 @@
 .question-box {
-    background-color: $main-color;
+    background-color: №545;
     max-width: 500px;
     width: 100%;
     height: 300px;
@@ -7,11 +7,13 @@
     border: 5px solid transparent;
     cursor: pointer;
     transition: .4s ease-in-out;
+    color: #f5e6d3;
+    font-family: 'UAF Sans', sans-serif;
 
     &:hover {
         background-color: white;
-        color: black;
-        border: 5px solid $main-color;
+        color: #6F6655;
+        box-shadow: 0 0 10px #D8C4A9;
         transform: scale(1.03);
     }
 
@@ -33,7 +35,7 @@
         & p {
             font-size: 1.6rem;
             font-weight: 600;
-            max-height: 100px;
+            max-height: 150px;
             line-height: 1.7;
             margin: auto;
         }
