--- a/src/components/main/components/section_faq/style.scss
+++ b/src/components/main/components/section_faq/style.scss
@@ -2,12 +2,13 @@
 
 .faq {
     padding: 100px 15px;
-    background-color: $bg-color;
+    background-color: #787a7c;
     color:black;
 
     & h2 {
         margin-bottom: 5rem;
         color: white;
+        font-family: 'Volja', sans-serif;
     }
 
     .questions-container {
