--- a/src/components/main/components/section_form/style.scss
+++ b/src/components/main/components/section_form/style.scss
@@ -1,20 +1,23 @@
 .form {
-    background-color: $bg-color;
+    background: rgb(120,122,124);
+    background: linear-gradient(0deg, rgba(120,122,124,1) 0%, rgba(99,84,49,1) 0%, rgba(168,157,130,1) 100%);
     padding: 100px 15px 0 15px;
 
     & h2 {
         margin-bottom: 3rem;
         color: white;
+        font-family: 'Volja', sans-serif;
     }
 
     & form { 
         display: flex;
         align-items: center;
         flex-direction: column;
+        font-family: 'UAF Sans', sans-serif;
 
         .file-drop-zone {
             width: 90%;
-            border: 2px dashed #00ffee;
+            border: 2px dashed #D8C4A9;
             border-radius: 8px;
             padding: 20px 25px;
             display: flex;
@@ -26,42 +29,44 @@
             transition: background-color 0.2s ease-in-out;
     
             &:hover {
-                background-color: rgba(0, 255, 238, 0.1);
+                background-color: rgba(234, 208, 147, 0.1);
             }
     
             i.bxs-pin {
                 font-size: 24px;
-                color: #00ffee;
+                color: white;
             }
     
             span {
                 flex-grow: 1;
-                color: #333;
+                color: white;
                 font-size: 14px;
             }
         }
 
         input, textarea {
+            font-family: 'UAF Sans', sans-serif;
             width: 90%;
             padding: 2.5rem;
             font-size: 1.8rem;
             color: $text-color;
             background-color: $bg-color;
             border-radius: 2rem;
-            border: 2px solid $main-color;
+            border: 2px solid #D8C4A9;
             margin: .7rem 0;
             resize: none;
         }
 
         .submit-btn {
             width: 25rem;
-            color: $main-color;
+            color: black;
+            font-size: 2.5rem;
+            font-weight: 400;
             transition: .3s ease-in-out;
 
             &:hover {
-                background-color: $main-color;
-                box-shadow: 0 0 25px $main-color;
-                color: white;
+                box-shadow: 0 0 25px #D8C4A9;
+                color: black;
             }
         }
 
