--- a/src/components/main/components/section_home/style.scss
+++ b/src/components/main/components/section_home/style.scss
@@ -1,5 +1,5 @@
 section {
-    min-height: 100vh;
+    min-height: 90vh;
     padding: 5rem 12% 10rem;
 }
 
@@ -9,15 +9,24 @@ section {
     justify-content: center;
     gap: 15rem;
 
+    background-image: url(./images/fone2-2.png);
+    background-size: cover;
+    background-position: right; 
+    background-repeat: no-repeat; 
+
+
     .home-content {
         display: flex;
         flex-direction: column;
-        align-items: baseline;
-        text-align: left;
-        justify-content: center;
+        align-items: end;
+        
+        justify-content: end;
         margin-top: 3rem;
+        margin-left: 70rem;
+        color: white;
 
         h1 {
+            font-family: 'Volja', sans-serif;
             font-size: 7rem;
             font-weight: 700;
             margin-top: 1.5rem;
@@ -25,22 +34,20 @@ section {
         }
 
         h3 {
+            font-family: 'UAF Sans', sans-serif;
             margin-bottom: 2rem;
             margin-top: 1rem;
             font-size: 3.5rem;
         }
 
-        .text-animation {
-            font-size: 34px;
-            font-weight: 600;
-            min-width: 280px;
-        }
 
         p {
+            font-family: 'UAF Sans', sans-serif;
             font-size: 1.5rem;
             font-weight: 500;
             line-height: 1.8;
-            max-width: 1000px;
+            max-width: 800px;
+            text-align: end;
         }
 
         .social-icons {
@@ -52,18 +59,18 @@ section {
                 width: 4.5rem;
                 height: 4.5rem;
                 background: transparent;
-                border: 2px solid $main-color;
+                border: 2px solid #D8C4A9;
                 font-size: 2.5rem;
                 border-radius: 50%;
-                color: $main-color;
+                color: #fff;
                 margin: 3rem 1.5rem 3rem 0;
                 transition: .3s ease-in-out;
 
                 &:hover {
                     color: $text-color;
                     transform: scale(1.3)translateY(-5px);
-                    box-shadow: 0 0 25 $main-color;
-                    background-color: $main-color;
+                    box-shadow: 0 0 25px #D8C4A9;
+                    background-color: #D8C4A9;
                 }
             }
         }
@@ -74,35 +81,37 @@ section {
             gap: 1.5rem;
 
             .btn {
+                font-family: 'Volja', sans-serif;
                 display: inline-block;
                 padding: 1rem 2.8rem;
-                background-color: $main-color;
-                box-shadow: 0 0 25 $main-color;
+                background-color: #D8C4A9;
+                box-shadow: 0 0 25px #D8C4A9;
                 border-radius: 4rem;
                 font-size: 1.6rem;
-                font-weight: 600;
-                color: black;
+                font-weight: 400;
+                color: #000;
                 border: 2px solid transparent;
                 letter-spacing: 0.1rem;
                 transition: .3s ease-in-out;
                 cursor: pointer;
+                font-size: 2rem;
 
                 &:hover {
                     transform: scale(1.05);
-                    box-shadow: 0 0 50px $main-color;
+                    box-shadow: 0 0 50px #D8C4A9;
                 }
             }
 
             & a:nth-of-type(2) {
-                background-color: black;
-                color: $main-color;
-                border: 2px solid $main-color;
+                background: none;
+                color: #000;
+                border: 2px solid #D8C4A9;
                 box-shadow: 0 0 25px transparent;
 
                 &:hover {
-                    box-shadow: 0 0 25px $main-color;
-                    background-color: $main-color;
-                    color: black;
+                    box-shadow: 0 0 25px #D8C4A9;
+                    background-color: #D8C4A9;
+                    color: #cd9346;
                 }
             }
         }
