--- a/src/components/main/components/section_road_map/components/style.scss
+++ b/src/components/main/components/section_road_map/components/style.scss
@@ -19,9 +19,9 @@
     .timeline-dot {
         height: 21px;
         width: 21px;
-        background-color: $main-color;
-        box-shadow: 0 0 25px $main-color,
-                    0 0 50px $main-color;
+        background-color: #D8C4A9;
+        box-shadow: 0 0 25px #D8C4A9,
+                    0 0 50px #D8C4A9;
         position: absolute;
         left: calc(50% - 8px);
         border-radius: 50%;
@@ -31,25 +31,26 @@
     .timeline-date {
         font-size: 20px;
         font-weight: 800;
-        color: white;
+        color: rgb(0, 0, 0);
         margin: 6px 0 15px;
     }
 
     .timeline-content {
-        background-color: $bg-color;
-        border: 3px solid $main-color;
+        background-color: rgba(77,69,51, 0.8);
+        border: 3px solid #D8C4A9;
         padding: 30px 50px;
         border-radius: 4rem;
-        box-shadow: 0 0 10px $main-color;
+        box-shadow: 0 0 10px #D8C4A9;
         cursor: pointer;
         transition: .3s ease-in-out;
 
         &:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 25px $main-color;
+            box-shadow: 0 0 25px #D8C4A9;
         }
 
         & h3 {
+            font-family: 'UAF Sans', sans-serif;
             font-size: 20px;
             font-weight: 500;
             color: white;
@@ -57,6 +58,7 @@
         }
 
         & p {
+            font-family: 'UAF Sans', sans-serif;
             color: white;
             font-size: 16px;
             font-weight: 300;
