--- a/src/components/main/components/section_road_map/style.scss
+++ b/src/components/main/components/section_road_map/style.scss
@@ -8,13 +8,17 @@
 
 .roadmap {
     padding: 100px 15px;
-    background-color: $sec-bg-color;
+    background: rgb(120,122,124);
+    background: linear-gradient(0deg, rgba(120,122,124,1) 0%, rgba(168,157,130,1) 49%, rgba(99,84,49,1) 100%);  
 
     & h2 {
         margin-bottom: 5rem;
+        font-family: 'Volja', sans-serif;
+        color: white;
     }
 
     .timeline-items {
+        font-family: 'UAF Sans', sans-serif;
         max-width: 1200px;
         margin: auto;
         display: flex;
@@ -26,7 +30,7 @@
             position: absolute;
             width: 5px;
             height: 100%;
-            background-color: $main-color;
+            background-color: #D8C4A9;
             left: calc(50% - 1px);
         }
     }
