(Fix) Lending media styles fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import './view/lending/style.scss';
 @import './view/singIn/style.scss';
 @import './view/administrator/style.scss';
+@import './view/accepted/style.scss';
 
 @font-face {
     font-family: 'Volja';
