--- a/src/components/main/components/section_form/style.scss
+++ b/src/components/main/components/section_form/style.scss
@@ -16,7 +16,7 @@
         font-family: 'UAF Sans', sans-serif;
 
         .file-drop-zone {
-            width: 90%;
+            width: 80%;
             border: 2px dashed #D8C4A9;
             border-radius: 8px;
             padding: 20px 25px;
@@ -46,14 +46,14 @@
 
         input, textarea {
             font-family: 'UAF Sans', sans-serif;
-            width: 90%;
+            width: 80%;
             padding: 2.5rem;
             font-size: 1.8rem;
             color: $text-color;
             background-color: $bg-color;
             border-radius: 2rem;
             border: 2px solid #D8C4A9;
-            margin: .7rem 0;
+            margin: .7rem 2px;
             resize: none;
         }
 
@@ -80,6 +80,10 @@
 
             .input-group {
                 width: 100%;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
             }
 
             .input-box {
