--- a/src/components/main/components/section_home/style.scss
+++ b/src/components/main/components/section_home/style.scss
@@ -1,5 +1,5 @@
 section {
-    min-height: 90vh;
+    min-height: 100vh;
 }
 
 .home {
@@ -44,11 +44,11 @@ section {
 
         p {
             font-family: 'UAF Sans', sans-serif;
-            font-size: 1.5rem;
+            font-size: 1.6rem;
             font-weight: 500;
             line-height: 1.8;
-            max-width: 800px;
-            text-align: end;
+            max-width: 760px;
+            text-align: justify;
         }
 
         .social-icons {
