--- a/src/components/adminPanels/components/mainPanel/components/account/style.scss
+++ b/src/components/adminPanels/components/mainPanel/components/account/style.scss
@@ -2,14 +2,17 @@
     padding: 2rem;
 
     & p {
+        font-family: 'UAF Sans', sans-serif;
         letter-spacing: .125rem;
-        color: #818ea3;
+        color: #9E8B75;
         font-size: 2rem;
         margin-bottom: 2rem;
+
     }
 
     & h1 {
-        color: #3d5170;
+        font-family: 'Volja', sans-serif;
+        color: #4D3E34;
         font-size: 3rem;
         font-weight: 500;
         line-height: 1;
@@ -19,7 +22,7 @@
 }
 
 .account-settings {
-    color: #3d5170;
+    color: #7b6d5f;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -32,7 +35,7 @@
         align-items: center;
         width: 35%;
         height: 300px;
-        background-color: rgb(246, 244, 244);
+        background-color: #f3e8db;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
         margin: 2rem;
         padding: 2rem;
@@ -45,27 +48,33 @@
         }
 
         .data {
+            font-family: 'UAF Sans', sans-serif;
             padding: 1rem 2rem 1rem 2rem;
             font-size: 3rem;
+            color: #7b6d5f;
         }
 
         .role {
             padding-bottom: 2rem;
             font-size: 2rem;
+            color: #a2978b;
+            font-family: 'UAF Sans', sans-serif;
         }
 
         .account-info {
             width: 100%;
             text-align: center;
+            font-family: 'UAF Sans', sans-serif;
 
             h3 {
                 font-size: 1.5rem;
+                color: #7b6d5f;
             }
 
             .progress-bar {
                 width: 100%;
                 height: 30px;
-                background-color: #e0e0e0;
+                background-color: #e6d6c2;
                 border-radius: 5px;
                 overflow: hidden;
                 position: relative;
@@ -74,7 +83,7 @@
 
                 .progress {
                     height: 100%;
-                    background-color: #4caf4f99;
+                    background-color: #b69a7a;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -102,17 +111,18 @@
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
-        background-color: #f9f9f9;
+        background-color: #f3e8db;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         margin: 2rem;
+        font-family: 'UAF Sans', sans-serif;
 
         h2 {
             font-size: 2.5rem;
-            color: #3d5170;
+            color: #7b6d5f;
             margin-bottom: 20px;
             padding: 1rem;
-            border-bottom: 0.1px solid rgb(180, 180, 180);
+            border-bottom: 0.1px solid #d4c5b6;
         }
         
         .form-group {
@@ -131,8 +141,9 @@
         
         label {
             font-size: 1.8rem;
-            color: #818ea3;
+            color: #a2978b;
             margin-bottom: 5px;
+            font-family: 'UAF Sans', sans-serif;
         }
         
         input[type="text"],
@@ -140,7 +151,8 @@
         input[type="password"] {
             padding: 10px;
             font-size: 1.8rem;
-            border: 1px solid #ddd;
+            font-family: 'UAF Sans', sans-serif;
+            border: 1px solid #d4c5b6;
             border-radius: 5px;
             width: 100%;
             box-sizing: border-box;
@@ -155,6 +167,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
+            font-family: 'UAF Sans', sans-serif;
         }
         
         .profile-photo-preview {
@@ -162,7 +175,7 @@
             height: 80px;
             border-radius: 50%;
             object-fit: cover;
-            border: 1px solid #ddd;
+            border: 1px solid #b69a7a;
         }
         
         .upload-button {
@@ -170,21 +183,23 @@
             padding: 8px 12px;
             font-size: 1.5rem;
             color: #fff;
-            background-color: #3d5170;
+            background-color: #7b6d5f;
             border-radius: 5px;
             cursor: pointer;
             text-align: center;
+            font-family: 'UAF Sans', sans-serif;
         }
         .upload-button:hover {
-            background-color: #2c3e50;
+            background-color: #b69a7a;
         }
 
         .save-button {
+            font-family: 'UAF Sans', sans-serif;
             width: 100%;
             padding: 12px;
             font-size: 1.8rem;
             color: #fff;
-            background-color: #3d5170;
+            background-color: #7b6d5f;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -193,7 +208,7 @@
         }
         
         .save-button:hover {
-            background-color: #2c3e50;
+            background-color: #b69a7a;
         }
     }
 }
