--- a/src/components/adminPanels/components/mainPanel/components/adminHeader/style.scss
+++ b/src/components/adminPanels/components/mainPanel/components/adminHeader/style.scss
@@ -1,18 +1,19 @@
 .adminHeader {
-    border-bottom: 0.1px solid rgb(180, 180, 180);
-    
+    border-bottom: 1px solid #D8C4B0;  
+    background-color: #F4E3D0;  
     .profile-container {
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        padding: 0.45rem 2rem;
-        gap: 25px;
+        padding: 1.75rem 2rem;
+        gap: 20px;
 
         & p {
-            color: #3d5170;
-            font-size: 2rem;
+            font-family: 'UAF Sans', sans-serif;
+            color: #8B6B52;  
+            font-size: 1.8rem;
             font-weight: 600;
-            margin-right: 50px;
+            margin-right: 40px;
         }
     }
 }
