--- a/src/components/adminPanels/components/sidebar/style.scss
+++ b/src/components/adminPanels/components/sidebar/style.scss
@@ -1,36 +1,36 @@
 .sidebar {
-    color: rgb(103, 106, 138);
-    background-color: white;
+    color: #6B6154;  
+    background-color: #F4E3D0;  
     width: 250px;
-    
 
     .logo-container {
         display: flex;
-        border-bottom: 0.1px solid rgb(180, 180, 180);
-        
+        border-bottom: 1px solid #D8C4B0;  
         padding: 1rem;
         align-items: center;
         justify-content: center;
 
         .logo {
-            width: 50px;
+            width: 75px;
+            margin-right: 15px;
         }
 
         .text {
-            font-size: 2rem;
+            font-family: 'Volja', sans-serif;
+            font-size: 1.5rem;
             font-weight: 600;
+            color: #8C7A6B;  
         }
     }
 
     .navbar {
-        
         ul {
             display: flex;
             flex-wrap: wrap;
             padding-left: 0;
             margin-bottom: 0;
             list-style: none;
-            
+
             li {
                 white-space: nowrap;
                 min-width: 100%;
@@ -38,17 +38,24 @@
                 overflow: hidden;
 
                 & .nav-btn {
+                    font-family: 'UAF Sans', sans-serif;
                     display: flex;
                     gap: 10px;
                     font-size: 2.5rem;
                     font-weight: 400;
-                    color: #3d5170;
+                    color: #7D7061;  
                     padding: 1.5rem 2rem;
+
+                    &:hover {
+                        background-color: #E8D7C2;  
+                        color: #5D5043;  
+                    }
                 }
 
                 .active {
-                    color: rgb(57, 110, 224);
-                    border-left: 5px solid #3d5170;
+                    color: #A67C52;  
+                    border-left: 5px solid #A67C52;
+                    background-color: #EFE3D8; 
                 }
             }
         }
