--- a/src/components/adminPanels/style.scss
+++ b/src/components/adminPanels/style.scss
@@ -2,8 +2,9 @@
 @import './components/mainPanel/style.scss';
 
 .admin-panels-container {
-    background-color: #F5F6F8;
+    background-color: #F4E3D0;  
     width: 100%;
     height: 100vh;
     display: flex;
+    padding: 0 2rem; 
 }
