--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 76%;
-    padding: 4rem 12% 4rem;
+    padding: 2rem 12% 2rem;
     background-color: rgba(0, 0, 0, 0.36);
     backdrop-filter: blur(10px);
     display: flex;
@@ -18,6 +18,13 @@
         font-weight: 800;
         cursor: pointer;
         transition: .3s ease;
+        display: flex;
+        align-items: center;
+        gap: 15px;
+
+        .logo-img {
+            width: 74px;
+        }
 
         &:hover {
             transform: scale(1.1);
