--- a/src/components/main/components/section_analytics/components/style.scss
+++ b/src/components/main/components/section_analytics/components/style.scss
@@ -1,4 +1,4 @@
-$primary-color: #4a90e2;
+$primary-color: #333;
 $bg-color: #f3f4f6;
 $text-color: #333;
 $box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
@@ -11,6 +11,8 @@ $box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
 
 .frame-container {
     @include flex-center;
+    max-width: 500px;
+    width: 100%;
     min-height: 220px;
     padding: 20px;
     background-color: $bg-color;
@@ -26,6 +28,7 @@ $box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
     }
 
     .data-box {
+        font-family: 'Volja', sans-serif;
         text-align: center;
         background: white;
         border-radius: 10px;
@@ -46,9 +49,10 @@ $box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
         }
 
         .count {
+            margin-top: 1rem;
+            font-family: 'Volja', sans-serif;
             display: inline-block;
             font-size: 3rem;
-            font-weight: bold;
             color: $primary-color;
             animation: popIn 0.6s ease;
             border-bottom: 3px solid $primary-color;
