--- a/src/components/main/components/section_analytics/style.scss
+++ b/src/components/main/components/section_analytics/style.scss
@@ -4,6 +4,9 @@
     padding: 100px 15px;
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(168,157,130,1) 0%, rgba(120,122,124,1) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     & h2 {
         margin-bottom: 5rem;
@@ -17,4 +20,5 @@
         justify-content: center;
         gap: 3.5rem;
     }
+
 }
