--- a/src/components/main/components/section_form/style.scss
+++ b/src/components/main/components/section_form/style.scss
@@ -27,6 +27,12 @@
             position: relative;
             text-align: center;
             transition: background-color 0.2s ease-in-out;
+
+            .file-list {
+                word-break: break-all;
+                overflow-wrap: break-word;
+                width: 270px;
+            }
     
             &:hover {
                 background-color: rgba(234, 208, 147, 0.1);
@@ -93,4 +99,59 @@
             }
         }
     }
+
+    .modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+    }
+    
+    .modal-content {
+        background: #D8C4A9;
+        font-size: 4rem;
+        padding: 20px;
+        border-radius: 18px;
+        text-align: center;
+        max-width: 500px;
+        width: 100%;
+        
+        h2 {
+            color: black;
+        }
+
+        p {
+            font-family: 'UAF Sans', sans-serif;
+            font-weight: 500;
+            padding: 1rem;
+        }
+    }
+    
+    button {
+        font-family: 'UAF Sans', sans-serif;
+        margin-top: 15px;
+        width: 25rem;
+        color: black;
+        font-size: 2.5rem;
+        font-weight: 500;
+        border-radius: 18px;
+        transition: .3s ease-in-out;
+        box-shadow: 0 0 25px #D8C4A9;
+        border: 1px solid #D8C4A9;
+
+        &:hover {
+            box-shadow: 0 0 50px #D8C4A9;
+            border: 1px solid #976b31;
+            color: black;
+            transform:scale(1.03);
+        }
+        cursor: pointer;
+    }
+    
 }
